Refactor tests to also use Api Tokens